--- a/TravelTheWorld/package.json
+++ b/TravelTheWorld/package.json
@@ -27,12 +27,12 @@
     "expo-linking": "~7.1.4",
     "expo-localization": "^16.1.5",
     "expo-router": "~5.0.6",
+    "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
-    "i18n": "^0.15.1",
     "i18next": "^25.1.1",
     "moment": "^2.30.1",
     "react": "19.0.0",
@@ -47,12 +47,12 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-sharing": "~13.1.5"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
